# robotics_software_engineer

module_1_assignment/: CMakeLists.txt  package.xml  use.MD
module_1_assignment/include/: robot_class.hpp  sensor_library_design.hpp  sensors.hpp
module_1_assignment/src/: robot_class.cpp  robot_class_main.cpp  sensors.cpp  sensors_main.cpp
module_2_assignment/: CMakeLists.txt  task.md
module_2_assignment/include/: backward_and_forward_pattern.hpp  turtle_circle_pattern.hpp
module_2_assignment/launch/: back_and_forward_turtles.launch.py  multi_turtles.launch.py  task3.launch.py  turtle_circle_pattern.launch.py
module_2_assignment/src/: back_and_forward_pattern.cpp  turtle_circle_pattern.cpp
module_3_assignment/: CMakeLists.txt  task.md
module_3_assignment/launch/: gazebo_3dof_arm.launch.py  gazebo_ackerman.launch.py  robot_gazebo.launch.py  rviz_3dof_arm.launch.py  rviz_ackerman.launch.py  rviz_robot.launch.py
module_3_assignment/rviz/: arm_description.rviz  robot_description.rviz
module_3_assignment/urdf/: 3dof_arm.urdf  ackerman_mobile.urdf  robot.urdf
module_4_assessment/module_4_assignment/: CMakeLists.txt  readme.MD
module_4_assessment/module_4_assignment/include/: line_following.hpp  wall_follower.hpp
module_4_assessment/module_4_assignment/launch/: tb3_square_maze.launch.py
module_4_assessment/module_4_assignment/models/square_maze/: model.sdf
module_4_assessment/module_4_assignment/src/: imu.cpp  line_following.cpp  wall_follower.cpp
module_4_assessment/module_4_assignment/worlds/: square_maze.world
module_4_assessment/robot_sensing_debug/: debug.md
module_4_assessment/robot_sensing_debug/launch/: custom_sensors.launch.py  lidar_maze_solving.launch.py
module_4_assessment/robot_sensing_debug/src/: line_following_with_camera.cpp
module_5_assignment/: CMakeLists.txt  package.xml  task.MD
module_5_assignment/bag_files/first_QR_diagonal_path/: metadata.yaml
module_5_assignment/bag_files/second_QR_diagonal_path/: metadata.yaml
module_5_assignment/bag_files/third_QR_diagonal_path/: metadata.yaml
module_5_assignment/config/: position_controller.yaml
module_5_assignment/include/: goal_planner.hpp  line_following.hpp  lqr_lib.hpp  lqr_node.hpp  robot_template.hpp
module_5_assignment/launch/: gazebo_3dof_arm.launch.py  tb3_empty.launch.py  tb3_world.launch.py
module_5_assignment/rviz/: tb3.rviz
module_5_assignment/scripts/: calculate_intertias.py
module_5_assignment/src/: goal_planner.cpp  line_following.cpp  lqr_lib.cpp  lqr_node.cpp  marker.cpp
module_5_assignment/urdf/: 3dof_arm.urdf
module_5_assignment/worlds/: line_following.world
module_6_assignment/: CMakeLists.txt  task.md
module_6_assignment/bag_files/first_set/: metadata.yaml
module_6_assignment/config/: config.rviz  ekf_tb3_imu_gps.yaml
module_6_assignment/include/: gps_utils.hpp
module_6_assignment/launch/: ekf_tb3_imu_gps.launch.py  tb3_empty_world.launch.py
module_6_assignment/scripts/: Odometry.proto  Odometry_pb2.py  show.py
module_6_assignment/src/: ekf_node.cpp  gps_sub.cpp  gps_utils.cpp  make_code.cpp  marker.cpp
module_6_assignment/worlds/: empty.world
